Replace obtaining user as @RequestBody by security context principal